css/styles.css
a {
    text-decoration: none;
    padding-bottom: 1px;
    border-bottom: solid;
    border-color: #A6A499;
    border-width: 1.5px;
}

a:visited {
    text-decoration: none;
    color: #1A1919;
}

#splash {
    float: left;
    margin-top: -25px;
	height: 650px;
	width: 100%;
	background-color: #FAF9F5;
}

#about {
    float: left;
    margin-top: 90px;
    height: 600px;
    width: 100%;
}

h1 {
    font-family: 'Whitney A', 'Whitney B';
    font-weight: 300;
    font-style: normal;
    font-size: 38px;
    color: #1A1919;
}

.medium {
    font-family: 'Whitney A', 'Whitney B';
    font-weight: 500;
    font-style: normal;
}

h2 {
    font-family: 'Whitney A', 'Whitney B';
    font-weight: 300;
    font-style: normal;
    font-size: 28px;
    line-height: 42px;
    color: #1A1919;
}

p {
    font-family: 'Whitney A', 'Whitney B';
    font-weight: 300;
    font-style: normal;
    font-size: 22px;
    line-height: 36px;
    color: #1A1919;
}

.smallcaps {
    font-size: 18px;
    line-height: 37px;
    letter-spacing: 1.25px;
}

.separator {
    height: 5px;
    width: 35px;
    background-color: #FC583C;
}

#first {
    margin-top: 90px;
}

#second {
    margin-top: 90px;
    margin-bottom: 20px;
}

#third {
    margin-top: 100px;
    margin-bottom: 20px;
}

#intro {
    margin-top: 250px;
    margin-left: 11%;
}

#headline {
    margin-left: 11%;
    width: 78%;
}

#experience {
    float: left;
    margin-left: 11%;
    width: 68%;
}

#social {
    float: left;
    margin-left: 30px;
    width: 117px;
}

#contact {
    float: left;
    margin-top: 90px;
    margin-left: 11%;
    margin-bottom: 100px;
    width: 38%;
}

/* Other devices */


/* Extra Small Devices, Phones */ 
@media only screen and (max-width : 480px) {

#splash {
    height: 525px;
}

#about {
    margin-top: 45px;
}

h1 {
    font-size: 22px;
}

h2 {
    font-size: 18px;
    line-height: 26px;
}

p {
    font-size: 18px;
    line-height: 26px;
}

#intro {
    margin-top: 280px;
}

#first {
    margin-top: 75px;
}

#second {
    margin-top: 75px;
}

#third {
    margin-top: 75px;
}

.smallcaps {
    font-size: 14px;
    line-height: 34px
}

#contact {
    margin-top: 125px;
    line-height: 
}

}

/* Custom, iPhone Retina */ 
@media only screen and (max-width : 320px) {
    
}

